# qc0

./: .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: build-env.yaml  ci.yaml  test.yaml
env/: Dockerfile  pg_hba.conf
qc/: bind.py  compile.py  op.py
qc0/: __init__.py  base.py  bind.py  cli.py  compile.py  func.py  op.py  op_to_sql.py  plan.py  q.py  scope.py  sig.py  syn.py  syn_to_op.py  syntax.py
tests/: TPC-H.rst  XX_first.rst  XX_sort.rst  conftest.py  test_qc0.py
tests/snapshots/: snap_test_qc0.py
