[tool.black]
line_length = 79

[tool.pytest.ini_options]
addopts = "-p no:warnings"

[tool.poetry]
name = "qc0"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Andrey Popp <me@andreypopp.com>"]

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^1.3.19"
psycopg2 = "^2.8.6"
PyYAML = "^5.3.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "6.1.1"

[tool.poetry.scripts]
qc0-shell = 'qc0.cli:shell'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

